<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:titleTextColor="@color/titleColor"
            android:background="@color/colorPrimary"
            android:id="@+id/add_reminder_toolbar">

            <Button
                android:id="@+id/add_check"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="right"
                android:drawableRight="@drawable/check"
                android:drawableTint="@color/titleColor"
                android:layout_marginRight="8dp"
                android:background="@null"
                android:elevation="2dp"/>


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Remind Name Card-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/reminder"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!--Add name text field-->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        android:layout_marginBottom="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/reminder_name_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/colorGrey"
                            android:hint="@string/add_name"
                            android:shadowColor="@color/colorGrey"
                            android:textColorHint="@color/colorGrey" />

                    </android.support.design.widget.TextInputLayout>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>



            <!--Date and Time Card-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/date_time"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/date_input"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:backgroundTint="@color/colorGrey"
                                android:clickable="true"
                                android:drawableEnd="@drawable/calendar"
                                android:drawableTint="@color/colorAccent"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                android:hint="@string/add_date"
                                android:textColorHint="@color/colorGrey" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/time_input"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:backgroundTint="@color/colorGrey"
                                android:clickable="true"
                                android:drawableEnd="@drawable/clock"
                                android:drawableTint="@color/colorAccent"
                                android:focusable="false"
                                android:focusableInTouchMode="false"
                                android:hint="@string/add_time"
                                android:textColorHint="@color/colorGrey" />

                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <!--Notes Card-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/info"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="8dp" />

                    <!--Notes text field-->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/notesText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/colorGrey"
                            android:hint="@string/add_notes"
                            android:textColorHint="@color/colorGrey" />

                    </android.support.design.widget.TextInputLayout>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/type"
                            android:textColor="@color/colorAccent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toTopOf="@+id/type_spinner"/>

                        <TextView
                            android:id="@+id/priority"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/priority"
                            android:textColor="@color/colorAccent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toTopOf="@+id/priority_spinner"/>

                        <Spinner
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:id="@+id/type_spinner"
                            android:prompt="@string/type"
                            android:theme="@style/ThemeOverlay.AppCompat.Light"
                            android:spinnerMode="dropdown"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            tools:layout_editor_absoluteX="13dp">

                        </Spinner>

                        <Spinner
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:layout_weight="1"
                            android:id="@+id/priority_spinner"
                            android:prompt="@string/priority"
                            android:theme="@style/ThemeOverlay.AppCompat.Light"
                            android:spinnerMode="dropdown"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            tools:layout_editor_absoluteX="211dp">

                        </Spinner>

                    </android.support.constraint.ConstraintLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/remind_on"
                        android:textColor="@color/colorAccent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="8dp" />

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingTop="2dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="8dp">

                        <LinearLayout
                            android:id="@+id/buttons_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginRight="8dp"
                            app:layout_constraintRight_toRightOf="parent"
                            android:layout_marginLeft="8dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginBottom="8dp"
                            app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginTop="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp">

                        </LinearLayout>

                    </android.support.constraint.ConstraintLayout>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_marginTop="1dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/choose_location"
                        android:textColor="@color/colorAccent"
                        android:drawableBottom="@drawable/map_marker_radius"
                        android:drawableTint="@color/colorAccent"/>


                    <ImageView
                        android:id="@+id/location_pcick"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cropToPadding="true"
                        android:scaleType="centerCrop"
                        android:src="@null"
                        android:background="@null"
                        android:layout_gravity="center"/>



                </RelativeLayout>


            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>








</android.support.design.widget.CoordinatorLayout>