<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:scaleType="centerCrop"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/map_image"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/separator1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/map_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">
        </View>

        <EditText
            android:background="@android:color/transparent"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="Title"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/separator1"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            android:layout_marginTop="8dp" />

        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp">
        </View>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <android.support.design.widget.TextInputLayout
                android:id="@id/date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintLeft_toLeftOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/date_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorAccent"
                    android:clickable="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/add_date"
                    android:textColorHint="@color/colorAccent"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@id/time_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/time_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorAccent"
                    android:clickable="true"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/add_time"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/linearLayout2">

            <Spinner
                android:id="@+id/priority_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                android:prompt="@string/priority"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                android:spinnerMode="dropdown">
            </Spinner>

            <Spinner
                android:id="@+id/category_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:prompt="@string/type"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                android:spinnerMode="dropdown">


            </Spinner>

        </LinearLayout>



        <EditText
            android:id="@+id/comment"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:maxLines="8"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:text="Lorem Lorem Ipsum Ipsum ipsum lorem lorem lorem"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <LinearLayout
            android:id="@+id/buttons_holder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/comment"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

        </LinearLayout>

        <Button
            android:id="@+id/apply_changes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="Apply Changes"
            android:visibility="gone"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/buttons_holder"
            app:layout_constraintRight_toLeftOf="@+id/cancel"
            android:layout_marginTop="16dp"
            android:layout_marginRight="-1dp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:text="Cancel"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toBottomOf="@+id/buttons_holder"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="8dp" />
        <Button
            android:id="@+id/delete_button"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/buttons_holder"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>